@@ -1,1 +1,1 @@
-4.0.0beta5
+4.0.0beta6
